# quadcopter

./: .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yml  openocd.cfg  project.yml
.devcontainer/: devcontainer.json
app/: CMakeLists.txt  prj.conf  west.yml
app/boards/: nucleo_f303re.conf  nucleo_f303re.overlay
app/drivers/input/: pwm_inputs.c
app/include/: logging.h
app/include/app/: quaternion.h
app/include/drivers/: pwm_inputs.h
app/src/: CMakeLists.txt  attitude.c  attitude.h  imu_zephyr.c  imu_zephyr_sensor.c  input.c  input.h  input_pwm.h  input_shell.c  main.c  quaternion_cmsis.c
app/zephyr/: module.yml
configurator/: configurator.py  configurator.ui  console.py
controller/: CMakeLists.txt  west.yml
controller/app/: CMakeLists.txt  Kconfig  prj.conf
controller/app/boards/: controller.conf  controller.overlay  native_posix.conf  nucleo_f303re.conf  nucleo_f303re.overlay
controller/app/src/: CMakeLists.txt  attitude.c  calc.c  config_dispatcher.c  configs.c  filter.c  imu_zephyr.c  input.c  input_pwm_zephyr.c  input_shell.c  main.c  mixer.c  motors.c  motors_pwm.h  motors_pwm_zephyr.c  motors_shell.c  pid_cmsis.c  pid_inst.c  quaternion_cmsis.c  sbus_decoder.c
controller/drivers/: Kconfig
controller/lib/controller/: CMakeLists.txt  attitude.c  calc.c  filter.c  input.c  mixer.c  motors.c
controller/lib/controller/platform/: CMakeLists.txt  imu_zephyr.c  input_sbus_zephyr.c  input_shell.c  quaternion_cmsis.c
controller/zephyr/: module.yml
taskfiles/: Build.yml  Project.yml  Test.yml
test/unit/: test_attitude.c  test_input.c
(+57 files in other folders)
